--- a/product/index.html
+++ b/product/index.html
@@ -75,7 +75,7 @@
             <img src="sbeam.png" class="top-right-image"><div class="col-md-5 p-lg-5 mx-auto my-5">
                 <h1 class="display-4 fw-normal" _msttexthash="57759" _msthash="10">Sbeam</h1>
                 <p class="lead fw-normal" _msttexthash="58716333" _msthash="11">一个免费的电脑游戏下载工具</p>
-                <a class="btn btn-outline-secondary" href="https://183-255-110-69.pd1.cjjd19.com:30443/download-cdn.cjjd19.com/123-835/926228f0/1822713814-0/926228f0944f55260e352c3486e48343/c-m56?v=5&amp;t=1729184886&amp;s=1729184886c137fc5f4a7d7f434f73285c1f0ed956&amp;r=BRNEB5&amp;bzc=1&amp;bzs=1822713814&amp;filename=Sbeam.exe&amp;x-mf-biz-cid=7c0d9d6c-e52c-4d8a-9b2c-07179ac54904-584000&amp;auto_redirect=0&amp;cache_type=1&amp;xmfcid=32c41226-7fb4-4a21-a3da-5f9aaea526b3-1-50111d3b1" _msttexthash="5638321" _msthash="12">下载</a>
+                <a class="btn btn-outline-secondary" href="https://183-255-110-67.pd1.cjjd19.com:30443/download-cdn.cjjd19.com/123-139/c6afa60d/1822713814-0/c6afa60dcd075625523101d91baab88b/c-m52?v=5&t=1729216229&s=17292162294f4a813e6161413af16f79d8daee9ac7&r=VQP8QC&bzc=1&bzs=1822713814&filename=sbeam.exe&x-mf-biz-cid=9d9ebb66-e983-4813-a350-68c0e56c9b20-6eaa77&auto_redirect=0&cache_type=1&xmfcid=93e1993a-84a6-4b3e-b6d8-02a698c669ca-0-50111d3b1" _msttexthash="5638321" _msthash="12">下载</a>
             </div>
 
 
