--- a/product/index.html
+++ b/product/index.html
@@ -75,7 +75,7 @@
             <img src="sbeam.png" class="top-right-image"><div class="col-md-5 p-lg-5 mx-auto my-5">
                 <h1 class="display-4 fw-normal" _msttexthash="57759" _msthash="10">Sbeam</h1>
                 <p class="lead fw-normal" _msttexthash="58716333" _msthash="11">一个免费的电脑游戏下载工具</p>
-                <a class="btn btn-outline-secondary" href="https://183-255-110-67.pd1.cjjd19.com:30443/download-cdn.cjjd19.com/123-139/c6afa60d/1822713814-0/c6afa60dcd075625523101d91baab88b/c-m52?v=5&t=1729216229&s=17292162294f4a813e6161413af16f79d8daee9ac7&r=VQP8QC&bzc=1&bzs=1822713814&filename=sbeam.exe&x-mf-biz-cid=9d9ebb66-e983-4813-a350-68c0e56c9b20-6eaa77&auto_redirect=0&cache_type=1&xmfcid=93e1993a-84a6-4b3e-b6d8-02a698c669ca-0-50111d3b1" _msttexthash="5638321" _msthash="12">下载</a>
+                <a class="btn btn-outline-secondary" href="https://183-255-110-67.pd1.cjjd19.com:30443/download-cdn.cjjd19.com/123-139/c6afa60d/1822713814-0/c6afa60dcd075625523101d91baab88b/c-m52?v=5&t=1729216632&s=1729216632be1d1ae938cf9b15a094659444b9006d&r=YSGUD6&bzc=1&bzs=1822713814&filename=sbeam.exe&x-mf-biz-cid=a36d495d-1cf0-41fe-a387-30d37cedab4e-3dab77&auto_redirect=0&cache_type=1&xmfcid=f2a1a00c-d3c4-4c07-bcac-abc49194fde9-1-50111d3b1" _msttexthash="5638321" _msthash="12">下载</a>
             </div>
 
 
