--- a/product/index.html
+++ b/product/index.html
@@ -75,7 +75,7 @@
             <img src="sbeam.png" class="top-right-image"><div class="col-md-5 p-lg-5 mx-auto my-5">
                 <h1 class="display-4 fw-normal" _msttexthash="57759" _msthash="10">Sbeam</h1>
                 <p class="lead fw-normal" _msttexthash="58716333" _msthash="11">一个免费的电脑游戏下载工具</p>
-                <a class="btn btn-outline-secondary" href="https://183-255-110-67.pd1.cjjd19.com:30443/download-cdn.cjjd19.com/123-139/c6afa60d/1822713814-0/c6afa60dcd075625523101d91baab88b/c-m52?v=5&t=1729216632&s=1729216632be1d1ae938cf9b15a094659444b9006d&r=YSGUD6&bzc=1&bzs=1822713814&filename=sbeam.exe&x-mf-biz-cid=a36d495d-1cf0-41fe-a387-30d37cedab4e-3dab77&auto_redirect=0&cache_type=1&xmfcid=f2a1a00c-d3c4-4c07-bcac-abc49194fde9-1-50111d3b1" _msttexthash="5638321" _msthash="12">下载</a>
+                <a class="btn btn-outline-secondary" href="https://183-255-110-75.pd1.cjjd19.com:30443/download-cdn.cjjd19.com/123-61/16a9626a/1822713814-0/16a9626a65967b2d4fd5ed604eec003d/c-m52?v=5&t=1729217301&s=172921730160cfdc455b966e8253215ae25c9cb500&r=X2VWA1&bzc=1&bzs=1822713814&filename=sbeam.exe&x-mf-biz-cid=bca30f89-3fa4-4c7a-91eb-1b4b0217d86c-584000&auto_redirect=0&cache_type=1&xmfcid=67ddfbad-9f31-4be7-a103-332704f76833-1-50111d3b1" _msttexthash="5638321" _msthash="12">下载</a>
             </div>
 
 
