--- a/product/index.html
+++ b/product/index.html
@@ -76,6 +76,8 @@
                 <h1 class="display-4 fw-normal" _msttexthash="57759" _msthash="10">Sbeam</h1>
                 <p class="lead fw-normal" _msttexthash="58716333" _msthash="11">一个免费的电脑游戏下载工具</p>
                 <a class="btn btn-outline-secondary" href="https://www.123865.com/s/59qIjv-9tyI" _msttexthash="5638321" _msthash="12">123盘下载</a>
+                <div>
+                </div>
                 <a class="btn btn-outline-secondary" href="https://wway.lanzoue.com/i4ean2ctaj2f" _msttexthash="5638321" _msthash="12">蓝奏云下载（密码:h8is）</a>
             </div>
 
