--- a/product/index.html
+++ b/product/index.html
@@ -78,6 +78,7 @@
                 <a class="btn btn-outline-secondary" href="https://www.123865.com/s/59qIjv-9tyI" _msttexthash="5638321" _msthash="12">123盘下载</a>
                 <div>
                 </div>
+                <text>☝</text>
                 <div>
                 </div>
                 <a class="btn btn-outline-secondary" href="https://wway.lanzoue.com/i4ean2ctaj2f" _msttexthash="5638321" _msthash="12">蓝奏云下载（密码:h8is）</a>
