--- a/product/index.html
+++ b/product/index.html
@@ -81,7 +81,7 @@
                 <text>☝</text>
                 <div>
                 </div>
-                <a class="btn btn-outline-secondary" href="https://wway.lanzoue.com/i4ean2ctaj2f" _msttexthash="5638321" _msthash="12">蓝奏云下载（密码:h8is）</a>
+                <a1 class="btn btn-outline-secondary" href="https://wway.lanzoue.com/i4ean2ctaj2f" _msttexthash="5638321" _msthash="12">蓝奏云下载（密码:h8is）</a1>
             </div>
 
 
