--- a/product/index.html
+++ b/product/index.html
@@ -108,7 +108,7 @@
             <div class="bg-light me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
                 <div class="my-3 p-3">
                     <h2 class="display-5" _msttexthash="13232128" _msthash="17">游戏无限</h2>
-                    <p class="lead" _msttexthash="80269644" _msthash="18">Sbeam 允许用户投稿电脑破解游戏</p>
+                    <p class="lead" _msttexthash="80269644" _msthash="18">Sbeam 允许用户投稿电脑工具游戏</p>
                 </div>
                 <div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
             </div>
