--- a/product/index.html
+++ b/product/index.html
@@ -81,7 +81,7 @@
                 <text>☝</text>
                 <div>
                 </div>
-                <a1 class="btn btn-outline-secondary" href="https://wway.lanzoue.com/iQzr32cuq67e">蓝奏云下载（密码:bm9e）</a1>
+                <a1 class="btn btn-outline-secondary" href="https://wway.lanzoue.com/iQzr32cuq67e" _msttexthash="5638321" _msthash="12">蓝奏云下载（密码:bm9e）</a1>
             </div>
 
 
