--- a/product/index.html
+++ b/product/index.html
@@ -75,13 +75,13 @@
             <img src="sbeam.png" class="top-right-image"><div class="col-md-5 p-lg-5 mx-auto my-5">
                 <h1 class="display-4 fw-normal" _msttexthash="57759" _msthash="10">Sbeam</h1>
                 <p class="lead fw-normal" _msttexthash="58716333" _msthash="11">一个免费的电脑游戏下载工具</p>
-                <a class="btn btn-outline-secondary" href="https://www.123865.com/s/59qIjv-kiyI" _msttexthash="5638321" _msthash="12">123盘下载</a>
+                <a class="btn btn-outline-secondary" href="https://www.123865.com/s/59qIjv-5iyI" _msttexthash="5638321" _msthash="12">123盘下载</a>
                 <div>
                 </div>
                 <text>☝</text>
                 <div>
                 </div>
-                <a1 class="btn btn-outline-secondary" href="https://wway.lanzoue.com/iQzr32cuq67e" _msttexthash="5638321" _msthash="12">蓝奏云下载（密码:bm9e）</a1>
+                <a1 class="btn btn-outline-secondary" href="https://wway.lanzoue.com/iN7Tt2cwlsbc" _msttexthash="5638321" _msthash="12">蓝奏云下载（密码:9hwu）</a1>
             </div>
 
 
